const test = require('./utils/test');

// Not responsive
// iframely seems to hardcode this
// src: "https://securea.mlb.com/shared/video/embed/embed.html?content_id=" + content_id + "&topic_id=" + topic_id + "&property=" + property + '&',
// 
test('mlb.com', 'http://m.mlb.com/video/topic/33521662/v499312583/marcia-gay-harden-joins-express-written-consent');

test('mlb.com', 'http://m.braves.mlb.com/atl/video/v817982083/cinatl-inciarte-plates-smith-on-rbi-double/?partnerId=as_atl_20160615_62794946&adbid=743228864080424961&adbpl=tw&adbpr=21436663');
